Fixed about section mobile width and mobile portfolio section css'd

--- a/css/style.css
+++ b/css/style.css
@@ -751,7 +751,7 @@ div.navbardiv {
 		width: 100%;
 		float: none;
 		padding-top: 20px;
-		padding-left: 20%;
+		padding-left: 12%;
 		font-family: 'Montserrat', sans-serif;
 		line-height: 1.6em;
 		color: #ffffff;
@@ -849,6 +849,17 @@ div.navbardiv {
 	div.websitetext{
 		width: 100%;
 		float: none;
+
+	div.websitetext h2{
+		font-size: 14pt;
+		padding-top: 20px;
+		padding-bottom: 10px;
+		font-family: 'Montserrat', sans-serif;
+		line-height: 1.6em;
+		color: #ffffff;
+		text-decoration: none;
+		font-weight: bold;
+		text-align: center;
 	}
 }
 
